Edit CSS to fix spacing with top container in user editor and attribute builder. Label was too close from help paragraph and too far from table.

--- a/static/admin/attribute_builder/attribute_builder.css
+++ b/static/admin/attribute_builder/attribute_builder.css
@@ -37,7 +37,7 @@
 
 
 .buttonSection > div{
-    top: 15%;
+    transform: translateY(150%);
 }
 
 .literalContainer{
